docs:update content about class loader